2008-08-22  Don Porter  <dgp@users.sourceforge.net>

	* README:		Bump version number to 8.6a3
	* generic/tk.h:
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:

	* unix/configure:	autoconf-2.59
	* win/configure:

2008-08-28  Donal K. Fellows  <dkf@users.sf.net>

	* tests/imgPhoto.test: Fix failures. [Bug 2080587]

2008-08-28  Ania Pawelczyk  <aniap@users.sourceforge.net>

	* tests/option.test: Update to tcltest2
	* tests/place.test:
	* tests/scale.test:
	* tests/select.test:
	* tests/textBTree.test:
	* tests/textImage.test:
	* tests/textMark.test:
	* tests/textTag.test:
	* tests/unixMenu.test:

2008-08-25  Todd M. Helfter  <tmh@users.sourceforge.net>

	* library/menu.tcl: fix typo from [Bug 1023955]

2008-08-27  Peter Spjuth  <peter.spjuth@gmail.com>

	* tests/grid.test: Added a "knownBug"-marked test to show a problem
	identified in the grid implementation. [Bug 2075285]

2008-08-26  Donal K. Fellows  <dkf@users.sf.net>

	* tests/imgPhoto.test: More style improvements.

2008-08-25  Todd M. Helfter  <tmh@users.sourceforge.net>

	* library/menu.tcl: Do not flip to the arrow cursor on menus. This was
	a Motif convention. Current behavior is maintained iff tk_strictMotif
	is enabled. [Bug 1023955]

2008-08-25  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkImgPhoto.c (ImgPhotoConfigureMaster): Ensure that uses of
	TclStackAlloc and TclStackFree balance.

2008-08-25  Todd M. Helfter  <tmh@users.sourceforge.net>

	* library/tkfbox.tcl: Fix the multiple selection error for
	tk_getOpenFile -multiple 1 which fails on all unix platforms since the
	adoption of ttk widgets. [Bug 1936220]

2008-08-25  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkImgPhoto.c:	     Split the implementation of the core of
	* generic/tkImgPhoto.h:	     photo images into two pieces, the photo
	* generic/tkImgPhInstance.c: master (which manages the data model and
	the interaction with the script level) and the photo instances (which
	handle display).
